fixed media screen spacing

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -48,6 +48,9 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+  main {
+    height: 100%;
+  }
   .about-section {
     display: block;
   }
