--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,7 +2,7 @@
 
 main {
   display: flex;
-  height: 750px;
+  height: 700px;
   justify-content: center;
   align-items: center;
 }
@@ -50,6 +50,13 @@ h1 {
  cursor: pointer;
  background-color: $tiffany-blue;
  color: $white;
+}
+
+@media only screen and (max-width: 600px) {
+  main {
+    height: 100%;
+    margin-top: 100px;
+  }
 }
 
 
